--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js"></script>
+    <script src="exercises.js"></script>
     <title>Timeouts-Interval</title>
 </head>
 <body>
-    
+    <p>
+        <span class="minute"></span>
+        <span class="passed"></span>
+        <span class="timer">0</span>
+    </p>
 </body>
 </html>
