--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Timeouts-Interval</title>
 </head>
 <body>
+
+    <p class="typew"></p>
     <p>
         <span class="minute"></span>
         <span class="passed"></span>
         <span class="timer">0</span>
     </p>
+
 </body>
 </html>
